--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.9",
+    "nanoid": "^3.1.22",
     "react": "^17.0.2",
     "react-card-flip": "^1.1.1",
     "react-dom": "^17.0.2",
